@@ -1,5 +1,9 @@
 2011-08-04  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
+	* external node window height configurable
+
+2011-08-04  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
 	* initial size of sequent window configurable
 
 2011-08-01  Hendrik Tews  <tews@os.inf.tu-dresden.de>
